# LungCheck

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  train.py
alembic/: env.py
alembic/versions/: 1f008e33fe8d_create_predictions_table.py
app/: create_fastapi_app.py  main.py
app/api/v1/: __init__.py  diagnosis.py
app/core/: __init__.py  config.py
app/core/ml/: __init__.py  model_loader.py
app/core/models/: __init__.py  base.py  prediction.py
app/schemas/: __init__.py  diagnosis.py
app/utils/: __init__.py  image_processor.py
k8s/: app.yaml  postgres.yaml  service.yaml
tests/: conftest.py  test_diagnosis.py
